infra/k8s/microsvc-one-cluster-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: microsvc-one-cluster-srv
spec:
  selector:
    app: microsvc-one
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
