infra/k8s/ingress-svc.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: bonairdc.com
      http:
        paths:
          - path: /add
            pathType: Prefix
            backend: 
              service:
                name: node-cluster-srv
                port: 
                  number: 3000
